--- a/tutorial-backend/src/test/resources/Aplication.properties
+++ b/tutorial-backend/src/test/resources/Aplication.properties
@@ -1,7 +1,8 @@
-#Database
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=sa
 spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
